@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2025-10-01T01:05:53Z",
-  "count_outdated" : 573,
-  "uniques_outdated" : 399,
+  "timestamp" : "2025-10-03T00:57:51Z",
+  "count_outdated" : 574,
+  "uniques_outdated" : 400,
   "count" : 578,
   "uniques" : 404,
   "clones" : [
-    {
-      "timestamp": "2025-09-18T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2025-09-20T00:00:00Z",
       "count": 1,
