@@ -1,12 +1,7 @@
 {
-  "count": 5,
-  "uniques": 5,
+  "count": 4,
+  "uniques": 4,
   "clones": [
-    {
-      "timestamp": "2025-09-18T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
     {
       "timestamp": "2025-09-20T00:00:00Z",
       "count": 1,
